# lora-trainer

./: .gitignore  AGENTS.md  README.md  alembic.ini  config.example.toml  lora_trainer.db-journal  main.py  pyproject.toml  start-dev.cmd  start-prod.cmd
.beads/: config.yaml  issues.jsonl  metadata.json
.beads/hooks/: commit-msg.cursor.co-author
alembic/: env.py
alembic/versions/: 001_initial.py  002_dataset_preprocess.py  003_dataset_bucketing.py  004_config_versions.py  005_strip_lora_name_version_suffix.py  006_trained_loras.py  007_job_elapsed_time.py  008_migrate_legacy_training_yaml.py  009_dataset_crop_content_hash.py  010_drop_job_sampling_progress.py  011_dataset_relative_paths.py  (+2 more)
docs/: lora-captioning-guide.md
frontend/: DESIGN.md  package-lock.json  package.json  tailwind.config.js
lora_training_findings/: 01-problem.md  01-summary.md  02-problem-and-symptoms.md  02-tried-solutions.md  03-findings.md  03-hypotheses.md  04-attempts-and-fixes.md  04-pipelines.md  05-bucketing-run-jul2026.md  05-kohya-comparison.md  06-add-time-ids-collate-bug.md  06-winx-chimera-case-study.md  07-fp16-gradscaler-vs-kohya.md  07-recommendations.md  08-fix-n-post-run-jul2026.md  08-winx-bloom-case-study.md  09-lr-constant-post-run-jul2026.md  10-fix-m-validation.md  11-revised-ep4-noise-jul2026.md  12-train-scheduler-bug-jul2026.md  README.md
realistic-lora-training/: Melanie_CFTS_hypotheses_tested.md  Melanie_CFTS_hypotheses_to_test.md  Melanie_CFTS_problem.md  Melanie_Realistic_CFTS_v2_blur_analysis.md  Noor_IL_reference_analysis.md  README.md  metadata_example.json
scripts/: worker.py
tests/: conftest.py
(+356 files in other folders)
