[project]
name = "lora-trainer"
version = "0.1.0"
description = "Local SDXL LoRA training app with job queue"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlmodel>=0.0.22",
    "alembic>=1.14.0",
    "aiosqlite>=0.20.0",
    "pydantic-settings>=2.6.0",
    "pyyaml>=6.0.2",
    "diffusers>=0.32.0",
    "transformers>=4.48.0,<5.6",
    "peft>=0.14.0",
    "accelerate>=1.3.0",
    "safetensors>=0.4.5",
    "torch==2.12.0",
    "torchvision==0.27.0",
    "pillow>=11.0.0",
    "tqdm>=4.67.0",
    "tensorboard>=2.18.0",
    "numpy>=2.1.0",
    "psutil>=6.0.0",
    "huggingface-hub>=0.27.0",
    "onnxruntime-gpu>=1.20.0",
    "bitsandbytes>=0.44.0",
    "prodigyopt>=1.0",
    "xformers>=0.0.35",
]

[project.scripts]
lora-trainer-api = "src.api.main:run"
lora-trainer-worker = "scripts.worker:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=0.25.0",
    "httpx>=0.28.0",
    "ruff>=0.9.0",
    "vulture>=2.14",
]

[tool.ruff]
target-version = "py312"
src = ["src"]

[tool.ruff.lint]
select = ["F", "E", "W", "I"]
ignore = ["E501"]

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu130" }
torchvision = { index = "pytorch-cu130" }
